[package]
name = "drogue-network"
version = "0.2.0"
authors = ["Bob McWhirter", "Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2018"
description = "A Network Abstraction Layer (NAL) for Embedded Systems"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "1"
no-std-net = "0.4"
heapless = "^0.5"
